src/components/MissionCard.module.css
.card {
  min-height: 360px;
  position: relative;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: 2px 6px 6px 0 rgb(0, 0, 0);
  border: 1px solid teal;
  font-size: 13px;
}

.card-info {
  background: #000;
  width: 100%;
  padding: 10px 15px;
  position: absolute;
  z-index: 200;
  bottom: 0;
}

.card-info h3 {
  margin: 8px 0 8px;
}

.card-footer {
  margin-top: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  text-align: left;
}

.card-footer .avatar-row {
  margin-bottom: 5px;
}

.card-description {
  height: 70px;
}

.card-button {
  flex: 0 0 auto;
}

/* -- Avatars -- */

.avatar {
  width: 30px;
  height: 30px;
  border-radius: 1000px;
  margin-right: 7px;
}

.avatar-name {
  padding-bottom: 0;
  text-transform: uppercase;
}

.avatar-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex: 0 0 auto;
}

